--- a/DiscordDLLproxy.vcxproj
+++ b/DiscordDLLproxy.vcxproj
@@ -133,10 +133,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="helpers.h" />
     <ClInclude Include="hooks.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="helpers.cpp" />
     <ClCompile Include="hooks.cpp" />
   </ItemGroup>
   <ItemGroup>
